# Dynamic_App_Loading

./: .gitignore  CMakeLists.txt  Makefile  README.md  app_base.ld  cross.cmake  prj.conf  prj.conf.stm32
apps/: CMakeLists.txt  app_base.ld  app_startup.s
apps/blinky/: CMakeLists.txt  main.c
apps/lib/: led.h
boards/arm/nrf52840_kwp2/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  nrf52840_kwp2.dts  nrf52840_kwp2.yaml  nrf52840_kwp2_defconfig
docs/: Doxyfile.in  FreeRTOSConfig_8h_source.html  annotated.html  apps_2lib_2led_8h_source.html  dir_000002_000011.html  dir_000012_000011.html  dir_000013_000009.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_5e5d9b8787fb3e1e0f3c06f26f52f635.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_a96de440f4d99b757e91373e36ef2d39_dep.md5  dir_c084d30924bd1e8ec53aa3d424e0589f.html  dir_cc9c498d06243716de777a9c433a8d58.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  modules_2sys__module_2led_8h_source.html  simple__module_8h__dep__incl.md5  simple__module_8h_source.html  stm32f4xx__hal__conf_8h.html  structsys__struct-members.html  utilities_8c.html  utilities_8h.html  utilities_8h__dep__incl.md5  utilities_8h_source.html
docs/html/: FreeRTOSConfig_8h_source.html  annotated.html  app__loader_8c.html  app__loader_8c__incl.md5  app__loader_8h.html  app__loader_8h__dep__incl.md5  app__loader_8h__incl.md5  app__loader_8h_source.html  apps_2build_2blinky__tinf_8h_source.html  apps_2lib_2led_8h_source.html  apps_2lib_2syscall_8h_source.html  classes.html  dir_000001_000013.html  dir_000002_000009.html  dir_000002_000013.html  dir_000002_000015.html  dir_000009_000015.html  dir_000010_000004.html  dir_000010_000015.html  dir_000012_000004.html  dir_000013_000010.html  dir_000013_000012.html  dir_000014_000012.html  dir_000015_000012.html  dir_000017_000015.html  dir_000018_000009.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_19cb59092ef8958beb6bbfe9640b1d73.html  dir_19cb59092ef8958beb6bbfe9640b1d73_dep.md5  dir_30c9ae06766b5f3f81b53ed9d4ca0c66.html  dir_47d85f86322777eec91028594c8cd8d6.html  dir_47d85f86322777eec91028594c8cd8d6_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4b6a4b177d15d8ea58b14c96ed9b2115.html  dir_5e5d9b8787fb3e1e0f3c06f26f52f635.html  dir_5e5d9b8787fb3e1e0f3c06f26f52f635_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_70dce830b124a334d9946c99c243c7ec.html  (+71 more)
docs/html/search/: all_0.js  all_10.js  all_3.js  all_4.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_2.js  defines_0.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
docs/search/: all_1.js  all_2.js  all_5.js  classes_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js
elf2tbin/: blinky  blinky.tinf  elf2tbin.py
elf2tinf/: README.md  elf2tinf.py
include/: FreeRTOSConfig.h  blinky_tinf.h  syscall.h  utilities.h
include/STM32F4xx/Source/Templates/gcc/: startup_stm32f429xx.s
kernel/: CMakeLists.txt  prj.conf
kernel/include/: blinky_tinf.h  common.h
kernel/modules/app_loader/: app_loader.h
kernel/modules/sys_module/: CMakeLists.txt  sysled.c  sysled_kernel.h
kernel/tests/test_app_loader/: CMakeLists.txt
lib/: syscall.c  syscall_asm.s
modules/app_loader/: CMakeLists.txt  app_loader.c  app_loader.h
modules/sys_module/: CMakeLists.txt  led.c  led.h  syscall.c  syscall.h  sysled.h
src/: app_syscall.c.old  led.c  main.c  utilities.c
test/: CMakeLists.txt  test_app_loader.c
tests/test_app_loader/: CMakeLists.txt  test_app_loader.c  testcase.yaml
